# llm_cli

./: -  .gitattributes  .gitignore  .opencodeignore  README.md  bootstrap.sh  install.py  pyproject.toml  run.py
.ua/: .understandignore
.ua/tmp/: emit.mjs  imap-input.json  imap.json  sem-1.json  sem-2.json  ua-file-analyzer-input-1.json  ua-file-analyzer-input-2.json  ua-file-analyzer-input-3.json  ua-file-analyzer-input-4.json  ua-file-analyzer-input-5.json  ua-file-analyzer-input-6.json  ua-file-analyzer-input-7.json  ua-file-analyzer-input-8.json  ua-file-extract-results-1.json  ua-file-extract-results-2.json  ua-file-extract-results-3.json  ua-file-extract-results-4.json  ua-file-extract-results-5.json  ua-file-extract-results-6.json  ua-file-extract-results-7.json  ua-file-extract-results-8.json  ua-scan-files.json
claude/: README.md  claude_env.sh
claude/scripts/: cache_refresh_on_git.sh  cache_refresh_on_write.sh  setup_prerequisites.sh  (+2 more)
common/: check_optimizations.sh  gen_context_cache.py  git_clone.sh  git_clone_exail.sh  lib_cache.sh  lib_config.sh  lib_deps.sh  lib_headroom.sh  lib_log.sh  setup_atlassian.sh  setup_context.sh  setup_context_cache.sh  setup_dependencies.sh  setup_env.sh  setup_git_hooks.sh  setup_headroom.sh  setup_mcp_global.sh  setup_mcp_project.sh  setup_scripts_sync.sh  setup_shell_wrapper.sh  tool_profile.sh
copilot/: README.md  copilot_env.sh
docs/: PLUGINS.md
llm_cli/: __init__.py  __main__.py  cli.py  entry.py  paths.py  tool_profile.py
open_code/: README.md
tests/: test_deps.py  test_paths.py
windows/: bootstrap.ps1
(+79 files in other folders)
