[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_cli"
version = "2.0.0"
description = "Cross-platform token-optimization layer for Claude Code, Copilot CLI and OpenCode."
requires-python = ">=3.8"
readme = "README.md"

[project.scripts]
llm_cli = "llm_cli.cli:main"
claude = "llm_cli.entry:claude_main"
copilot = "llm_cli.entry:copilot_main"
opencode = "llm_cli.entry:opencode_main"

[tool.setuptools]
packages = ["llm_cli", "llm_cli.commands", "llm_cli.services", "llm_cli.platforms"]
