[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_cli"
version = "2.0.0"
description = "Cross-platform token-optimization layer for Claude Code and Copilot CLI."
requires-python = ">=3.9"
readme = "README.md"
dependencies = ["pyyaml", "grep-ast"]

[project.scripts]
llm_cli = "llm_cli.cli:main"
claude = "llm_cli.entry:claude_main"
copilot = "llm_cli.entry:copilot_main"

[tool.setuptools]
packages = ["llm_cli", "llm_cli.commands", "llm_cli.services", "llm_cli.platforms"]

[tool.setuptools.package-data]
# The vendored copilot-api ships whole (sources, prebuilt bundle, lockfile):
# llm_cli deploys that tree and installs it with npm, so a clone carries the
# patched build instead of pulling the registry one.
llm_cli = [
    "templates/*.yaml",
    "queries/*.scm",
    "vendor/copilot-api/**/*",
]
